tests/baselines/reference/parserComputedPropertyName29.errors.txt
parserComputedPropertyName29.ts(3,6): error TS2304: Cannot find name 'e'.
parserComputedPropertyName29.ts(3,11): error TS2304: Cannot find name 'id'.
parserComputedPropertyName29.ts(4,5): error TS2564: Property '[e2]' has no initializer and is not definitely assigned in the constructor.
parserComputedPropertyName29.ts(4,6): error TS2304: Cannot find name 'e2'.


==== parserComputedPropertyName29.ts (4 errors) ====
    class C {
        // yes ASI
        [e] = id++
         ~
!!! error TS2304: Cannot find name 'e'.
              ~~
!!! error TS2304: Cannot find name 'id'.
        [e2]: number
        ~~~~
!!! error TS2564: Property '[e2]' has no initializer and is not definitely assigned in the constructor.
         ~~
!!! error TS2304: Cannot find name 'e2'.
    }